# ci-preflight

./: .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: ado.py  ado_routes.py  database.py  github.py  main.py  models.py  tasks.py  worker.py
app/static/: index.html
ci_preflight/: __init__.py  ci_config_change.py  dependency_contract.py  diff_parser.py  large_diff.py  merge_conflict.py  missing_migration.py  models.py  nuget_lock_contract.py  reporter.py  secrets_committed.py  submodule_drift.py  test_deletion.py
scripts/: seed_from_history.py
