[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ci-preflight"
version = "0.1.0"
description = "Predict CI/CD pipeline failures before they happen"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ci", "devops", "github", "preflight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
